[CSS Background Blending] -webkit-background-blend-mode fails for certain SVG files https://bugs.webkit.org/show_bug.cgi?id=127350

Patch by Mihai Tica <mitica@adobe.com> on 2014-01-22
Reviewed by Dirk Schulze.

Source/WebCore:

The graphics context of the SVG inherits the blend mode set
on the background layer. Fix consists in drawing the SVG
in a transparency layer.

Test: css3/compositing/background-blend-mode-svg.html

* svg/graphics/SVGImage.cpp:
(WebCore::SVGImage::draw): Begin a transparency layer if a blend mode is set.

LayoutTests:

* css3/compositing/background-blend-mode-svg-expected.html: Added.
* css3/compositing/background-blend-mode-svg.html: Added.

Canonical link: https://commits.webkit.org/145420@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162517 268f45cc-cd09-0410-ab3c-d52691b4dbfc